--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "two functions: One that returns true, one that returns false",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node tests.js"
   },
   "repository": {
     "type": "git",
